# regidi

./: .gitignore  README.md  pyproject.toml
src/regidi/: __init__.py  __main__.py  reverse.py  substitutions.txt  utils.py
tests/: test_regidi.py  test_reverse.py
tools/: README.md  bad-words.txt  manage.py
